; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_db_trace.c_get_esp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_db_trace.c_get_esp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trapframe = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.trapframe*)* @get_esp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_esp(%struct.trapframe* %0) #0 {
  %2 = alloca %struct.trapframe*, align 8
  store %struct.trapframe* %0, %struct.trapframe** %2, align 8
  %3 = load %struct.trapframe*, %struct.trapframe** %2, align 8
  %4 = call i64 @TF_HAS_STACKREGS(%struct.trapframe* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.trapframe*, %struct.trapframe** %2, align 8
  %8 = getelementptr inbounds %struct.trapframe, %struct.trapframe* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = sext i32 %9 to i64
  br label %15

11:                                               ; preds = %1
  %12 = load %struct.trapframe*, %struct.trapframe** %2, align 8
  %13 = getelementptr inbounds %struct.trapframe, %struct.trapframe* %12, i32 0, i32 0
  %14 = ptrtoint i32* %13 to i64
  br label %15

15:                                               ; preds = %11, %6
  %16 = phi i64 [ %10, %6 ], [ %14, %11 ]
  %17 = trunc i64 %16 to i32
  ret i32 %17
}

declare dso_local i64 @TF_HAS_STACKREGS(%struct.trapframe*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
